# NGKsDevFabEco

./: .cert_pf.txt  .cert_work.txt  .gitignore  .migration_final_pf.txt  .migration_pf.txt  .profile_contract_work.txt  .release_dist_dir.txt  .repair_pf.txt  .targeted_repair_work.txt  .triage_work.txt  Canonical_Decision_Envelope_Spec_Lock_Answers.md  DEFERRED_ITEMS.md  Graph Real buildout.txt  LICENSE  LICENSE.md  NGKsDevFabEco_Comprehensive_Capabilities_Document.md  NGKsDevFabEco_Live_Code_Capabilities.md  NGKsGraph_Codebase_Analysis.md  README.md  RELEASE_NOTES_1.2.0.md  certification_gate_policy.json  certification_target.json  certification_workflow.md  ci_pipeline_snippet.ps1  connector_transport.json  env_capsule.hash.txt  env_capsule.lock.json  external_status_sync.json  install_ngksdevfabeco.ps1  lessons_learned.md  pyproject.toml  requirements.local.txt  uninstall_ngksdevfabeco.ps1
NGKsBuildCore/: .gitignore  README.md  pyproject.toml
NGKsBuildCore/examples/: hello_plan.json
NGKsBuildCore/examples/.ngks/: graph_state_manifest.json  project.json
NGKsBuildCore/ngksbuildcore/: cli.py  hashing.py  loggingx.py  plan.py  runner.py  scheduler.py  store.py
NGKsBuildCore/ngksbuildcore/adapters/: __init__.py  devfabric_adapter.py  graph_adapter.py
NGKsBuildCore/tests/: test_plan_ingest.py  test_runner_actionkey.py
NGKsBuildCore/tools/: run_example.ps1
NGKsDevFabric/: .gitignore  api_contract_validation_config.json  architectural_validation_config.json  memory_validation_config.json  ngksdevfabric_legacy_module_DO_NOT_IMPORT.py  performance_validation_config.json  pyproject.toml  security_validation_config.json
NGKsDevFabric/src/ngk_fabric/: component_exec.py  main.py  runwrap.py
NGKsDevFabric/src/ngksdevfabric/: cli.py
NGKsDevFabric/tests/: test_assignment_policy.py  test_certification_rollup.py  test_certification_target.py  test_certify_baseline.py  test_certify_compare.py  test_component_exec_console_vs_module.py  test_component_exec_module_fallback.py  test_connector_transport.py  test_delivery_adapters.py  test_doctor_backup_optional.py  test_execution_profiles.py  test_export_adapters.py  test_external_status_sync.py  test_history_engine.py  test_history_trends.py  test_intelligence.py  test_issue_update_policy.py  test_notebook_policy_guard.py  test_ownership_confidence.py  test_predictive_resolution_refinement.py  test_predictive_risk.py  test_probe_detection.py  test_profile_node_toolchain.py  test_proof_manager.py  test_proof_routing_contract.py  test_regression_hotspots.py  test_regression_intelligence.py  test_release_gate.py  test_remediation_guidance.py  test_resolution_tracking.py  test_run_orchestrator.py  test_run_orchestrator_module_fallback_no_scripts.py  test_run_orchestrator_noop_semantics.py  test_run_orchestrator_writes_stage_logs_on_missing_component.py  test_team_ownership_mapping.py  test_triage_tickets.py  test_validation_orchestrator.py  test_validation_planner.py  test_validation_plugin_framework.py  test_validation_rerun_pipeline.py  (+1 more)
NGKsDevFabric/tools/: e2e_all.ps1  e2e_smoke.ps1  e2e_suite.ps1  gate_buildcore_phaseB.ps1  gate_buildcore_phaseD.ps1  gate_buildcore_phaseE.ps1  gate_phaseF_bootstrap.ps1  ngk.ps1  ngk_fabric.ps1  phase11_no_forbidden_buildref_gate.ps1  phase12_graph_only_gate.ps1  phase12_runner.ps1  phase12_write_report.ps1  phase15_graph_only_lock_gate.ps1  phase17_verify.ps1  phase5_gate_runner.ps1  phase7_gate_runner.ps1  phase8_gate_runner.ps1
NGKsDevFabric/tools/dev/: bootstrap_venv.ps1
NGKsDevFabric/tools/eco/: build_wheelhouse.ps1  e2e_clean_install.ps1
NGKsEnvCapsule/: README.md  env_capsule.hash.txt  env_capsule.lock.json  pyproject.toml
NGKsEnvCapsule/docs/: SUMMARY.md
NGKsEnvCapsule/src/ngksenvcapsule/: capsule_schema.py  (+10 more)
NGKsEnvCapsule/tests/: test_hashing.py  test_lock_verify_cycle.py  test_stablejson.py  test_verify_mismatch.py
NGKsGraph/: .gitignore  MIGRATION.md  QUICKSTART.md  README.md  THIRD_PARTY_NOTICES.md  env_capsule.hash.txt  env_capsule.lock.json  ngksgraph.toml  pyproject.toml
NGKsGraph/.ngks/: graph_state_manifest.json
NGKsGraph/ngksgraph/: __main__.py  binary_contract.py  build.py  capsule.py  cli.py  compdb.py  compdb_contract.py  config.py  diff.py  forensics.py  graph.py  graph_contract.py  hashutil.py  import_cmake.py  log.py  mode.py  msvc.py  plan.py  plan_cache.py  proof.py  qt.py  repair.py  repo_classifier.py  sanitize.py  scan.py  scan_pipeline.py  selftest.py  target_drift_detector.py  toolchain.py  torture_project.py  util.py
NGKsGraph/proofs/: LATEST_NGKSGRAPH_PROOF_DIR.txt  LATEST_NGKSGRAPH_PROOF_ZIP.txt
NGKsGraph/templates/: default_ngksgraph.toml  multi_target_ngksgraph.toml  qt_app_ngksgraph.toml
NGKsGraph/tests/: qt_test_tools.py  test_ai_interface.py  test_bootstrap_command_format.py  test_build_target_selection.py  test_buildplan_buildcore_contract.py  test_cached_qt_libdirs_injection.py  test_capability_derivation.py  test_capsule_deterministic_zip.py  test_capsule_no_secrets.py  test_capsule_verify_roundtrip.py  test_capsule_why_mode.py  test_compdb_contract.py  test_compdb_determinism.py  test_compdb_multitarget.py  test_config.py  test_config_cli_error_surface.py  test_config_multitarget_parse.py  test_doctor_binary.py  test_ecosystem_mode.py  test_edge_origin_tracking.py  test_error_parse.py  test_explain_in_graph.py  test_freeze_from_snapshot_fallbacks.py  test_graph_contract.py  test_graph_cycle_detection.py  test_graph_export_schema.py  test_import_basic_cmake.py  test_init_repo_classifier.py  test_main.cpp  test_msvc_auto_report.py  test_msvc_env_parse.py  test_perf_report.py  test_phase5_temporal.py  test_phase_depth_upgrades.py  test_plan_cache.py  test_plan_command.py  test_profile_contract.py  test_profiles_cli_gates.py  test_profiles_config_parse.py  test_profiles_determinism.py  (+18 more)
NGKsGraph/tools/: APP_WRAPPER_OPTION_C_SNIPPET.md  gate_buildplan_phaseA.ps1  gate_phaseG_plan_audit.ps1  ngksgraph.ps1  ngksgraph_run.ps1  package_windows.ps1  phase11b_painkiller_runner.ps1  smoke_standalone.ps1
NGKsLibrary/: README.md  pyproject.toml
(+511 files in other folders)
