[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngksdevfabeco"
version = "1.2.5"
description = "NGKsDevFabEco local meta-package"
readme = "NGKsDevFabEco_Comprehensive_Capabilities_Document.md"
requires-python = ">=3.11"
dependencies = [
  "ngksbuildcore==0.1.8",
  "ngksenvcapsule==0.1.6",
  "ngkslibrary==0.1.6",
  "ngksgraph==0.1.14",
  "ngksdevfabric==1.2.5",
]

[tool.setuptools]
py-modules = []
