[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngksdevfabeco"
version = "1.3.3"
description = "NGKsDevFabEco local meta-package"
readme = "NGKsDevFabEco_Comprehensive_Capabilities_Document.md"
requires-python = ">=3.11"
dependencies = [
  "ngksbuildcore==0.2.0",
  "ngksenvcapsule==0.2.0",
  "ngkslibrary==0.2.0",
  "ngksgraph==0.2.0",
  "ngksdevfabric==1.3.3",
]

[tool.setuptools]
py-modules = []
