[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngksbuildcore"
version = "0.1.6"
description = "NGKsBuildCore"
requires-python = ">=3.10"
readme = "README.md"
license = {text = "Proprietary"}
authors = [{name="NGKsSystems"}]

[tool.setuptools.packages.find]
where = ["."]
include = ["ngksbuildcore*"]
exclude = ["_proof*", "artifacts*", "examples*", "tools*", ".venv*", "__pycache__*"]