[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ngksdevfabric"
description = "NGKs DevFabric build/ship/doctor orchestration CLI"
version = "1.2.2"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "NGKsSystems" }]
dependencies = [
	"ngksgraph==0.1.11",
	"ngksbuildcore==0.1.6",
	"ngksenvcapsule==0.1.4",
	"ngkslibrary==0.1.4",
]

[project.scripts]
ngksdevfabric = "ngksdevfabric.cli:main"
ngks = "ngksdevfabric.cli:main"

[project.optional-dependencies]
dev = [
	"pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ngksdevfabric"]
