[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "ngksdevfabric"
description = "NGKs DevFabric build/ship/doctor orchestration CLI"
version = "1.2.3"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "NGKsSystems" }]
dependencies = [
	"ngksgraph==0.1.12",
	"ngksbuildcore==0.1.7",
	"ngksenvcapsule==0.1.5",
	"ngkslibrary==0.1.5",
]

[project.scripts]
ngksdevfabric = "ngksdevfabric.cli:main"
ngks = "ngksdevfabric.cli:main"

[project.optional-dependencies]
dev = [
	"pytest>=8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ngksdevfabric"]
