[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngksenvcapsule"
version = "0.1.5"
description = "Deterministic environment capsule system"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
]

[project.scripts]
ngksenvcapsule = "ngksenvcapsule.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
