[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngksgraph"
version = "0.1.14"
description = "Deterministic graph planner and BuildCore handoff for MSVC C++ projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ngksgraph = "ngksgraph.cli:main"

[tool.setuptools.packages.find]
include = ["ngksgraph*"]

[tool.setuptools.package-data]
ngksgraph = ["templates/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
